--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Geniventure Dashboard</title>
     <link rel="shortcut icon" href="https://geniverse-lab.concord.org/static/lab/en/bf72c297ce97d03a2ea3d5d5cd469ea1026d2380/resources/images/favicon.ico">
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 </head>
 <body>
     <div id='root'></div>
