Update style; add class name to title

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Geniventure Dashboard</title>
     <link rel="shortcut icon" href="https://geniverse-lab.concord.org/static/lab/en/bf72c297ce97d03a2ea3d5d5cd469ea1026d2380/resources/images/favicon.ico">
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+    <script type="text/javascript" src="https://use.typekit.com/hdw8ayt.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
     <div id='root'></div>
