--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
     <script type="text/javascript" src="https://use.typekit.com/hdw8ayt.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106905302-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106905302-1');
+    </script>
 </head>
 <body>
     <div id='root'></div>
